Fix some styling issues on safari

--- a/static/styles/index.scss
+++ b/static/styles/index.scss
@@ -110,7 +110,7 @@ footer {
     font-size: 1.5em;
 }
 
-textarea:disabled {
+textarea {
     background: none;
     color: var(--success);
     border-bottom: solid var(--success);
