--- a/static/styles/main.scss
+++ b/static/styles/main.scss
@@ -68,15 +68,41 @@
 
 @font-face {
     font-family: "Cantarell Bold";
-    src: url(/fonts/Cantarell/Cantarell-Bold.ttf);
+    src: url(/fonts/Cantarell-Bold.ttf);
 }
 
 @font-face {
     font-family: "Source Sans Pro";
-    src: url(/fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf);
+    src: url(/fonts/SourceSansPro-Regular.ttf);
+}
+
+// Material Icons
+
+@font-face {
+    font-family: "Material Icons";
+    font-style: normal;
+    font-weight: 400;
+    src: url(/fonts/MaterialIcons-Round.woff2) format('woff2');
+}
+
+.material-icons {
+    font-family: "Material Icons";
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -moz-font-feature-settings: "liga";
+    -moz-osx-font-smoothing: grayscale;
 }
 
 // Actual styles
+
 
 body {
     background-color: var(--background);
@@ -135,25 +161,18 @@ header {
             background-color: var(--background);
             border: none;
             border-radius: 50%;
-            font-size: 24px;
+            color: var(--accent);
             display: flex;
             justify-content: center;
             place-items: center;
             width: 32px;
             height: 32px;
             margin: 0 5px;
-
-            svg {
-                fill: var(--accent);
-            }
         }
 
         button:hover {
             background-color: var(--accent);
-
-            svg {
-                fill: var(--background);
-            }
+            color: var(--background);
         }
 
         button:not(.active) {
